# pod2-onchain

./: .gitignore  Cargo.toml  README.md  build.rs  full-flow.sh  go.mod  go.sum  main.go  podprover.go  test-cli.sh
cli/: main.go
ffi/: Cargo.toml  build.rs  main.go
ffi/src/: lib.rs
solidity/: pod2verifier.sol
src/: groth.rs  lib.rs  main.rs  pod.rs  simple_proof.rs  wrap.rs
src/poseidon_bn128/: config.rs  constants.rs  mod.rs  permution.rs
