[package]
name = "pod2_onchain"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14.0"
anyhow = "1.0.56"
base64 = "0.22.1"
serde = "1.0.219"
serde_json = "1.0.141"
clap = { version = "4.0", features = ["derive"] }

plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "109d517d09c210ae4c2cee381d3e3fbc04aa3812" }
# plonky2 = { git = "https://github.com/0xPARC/plonky2.git", rev = "767a098d89b8d50d8aacfdce0c0a7222e8760d37" }
pod2 = { git="https://github.com/0xPARC/pod2", rev = "352b1fdac1bdb476a8afa48e7fa3d70075ae563a", default-features = false, features = ["backend_plonky2", "zk"]}

# dependencies for the wrapper
ff = { package = "ff", version = "0.13", features = ["derive"] }
num = { version = "0.4", default-features = false }
num-bigint = { version = "0.4", features = ["rand"] }
lazy_static = "1.4.0"
sha2          = "0.10"


[features]
default = ["backend_plonky2", "zk", "mem_cache"]
metrics = ["pod2/metrics"]
time = ["pod2/time"]
backend_plonky2 = ["pod2/plonky2"]
zk = ["pod2/zk"]
disk_cache = ["pod2/disk_cache"]
mem_cache = ["pod2/mem_cache"]

[patch."https://github.com/0xPARC/plonky2"]
plonky2 = { path = "../plonky2/plonky2" }
